<resources>
    <string name="app_name">E-Waiter</string>
    <string name="allergen_gluten">It contains gluten</string>
    <string name="allegerns_egg">It contains egg</string>
    <string name="allergens_milk">It contains milk</string>
    <string name="allergens_nuts">It contains nuts</string>
    <string name="allergens_seafood">It contains seafood</string>
    <string name="feo_notas">Notes</string>
    <string name="feo_add_button">Add</string>
    <string name="feo_dish_image">Dish image</string>
    <string name="menu_item_calcular_cuenta">Calculate bill</string>
    <string name="menu_calcular_cuenta_ready">Ready</string>
    <string name="menu_activity_menu_letter">Add dish to %s</string>
    <string name="edit_dish_guardar">Save</string>
    <string name="table_act_cuenta_mesa">Bill of table %s</string>
    <string name="table_act_total_cuenta">Total: %.2f €</string>
    <string name="menu_precio">%.2f €</string>
</resources>
