<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginStart="@dimen/feo_inner_margin"
    android:orientation="vertical"
    tools:context="com.calvo.carolina.e_waiter.fragments.EditOrderFragment">

    <ImageView
        android:id="@+id/feo_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/feo_inner_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/feo_dish_image"
        android:scaleType="fitXY"
        tools:src="@drawable/i01" />

    <LinearLayout
        android:id="@+id/feo_allergens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/feo_gluten_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/allergen_gluten"
            android:maxWidth="32dp"
            android:src="@drawable/a01"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/feo_egg_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/allegerns_egg"
            android:maxWidth="32dp"
            android:src="@drawable/a02"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/feo_fish_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/allegerns_egg"
            android:maxWidth="32dp"
            android:src="@drawable/a03"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/feo_milk_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/allergens_milk"
            android:maxWidth="32dp"
            android:src="@drawable/a04"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/feo_nuts_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/allergens_nuts"
            android:maxWidth="32dp"
            android:src="@drawable/a05"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/feo_seafood_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/allergens_seafood"
            android:maxWidth="32dp"
            android:src="@drawable/a06"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/feo_description_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/feo_inner_margin"
        android:layout_marginTop="@dimen/feo_inner_margin"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer est diam, pharetra ac neque eget, posuere accumsan ex. " />

    <TextView
        android:id="@+id/label_notes_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/feo_inner_margin"
        android:layout_marginTop="@dimen/feo_inner_margin"
        android:labelFor="@+id/feo_notes_text"
        android:text="@string/feo_notas"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/feo_notes_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_marginBottom="@dimen/feo_inner_margin"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        tools:text="La ensalada sin tomate" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/feo_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/feo_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feo_add_button"
             />
    </LinearLayout>

</LinearLayout>
