<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/inner_margin"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/cmd_dish_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cmd_gluten_01"
        app:layout_constraintEnd_toStartOf="@+id/cmd_dish_price_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Huevos fritos con patatas"
        />

    <ImageView
        android:id="@+id/cmd_gluten_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/allergen_gluten"
        android:maxWidth="32dp"
        android:src="@drawable/a01"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cmd_egg_02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmd_dish_name_text"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/cmd_egg_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/allegerns_egg"
        android:maxWidth="32dp"
        android:src="@drawable/a02"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cmd_fish_03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cmd_gluten_01"
        app:layout_constraintTop_toBottomOf="@+id/cmd_dish_name_text"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/cmd_fish_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/allegerns_egg"
        android:maxWidth="32dp"
        android:src="@drawable/a03"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cmd_milk_04"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cmd_egg_02"
        app:layout_constraintTop_toBottomOf="@+id/cmd_dish_name_text"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/cmd_milk_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/allergens_milk"
        android:maxWidth="32dp"
        android:src="@drawable/a04"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cmd_nuts_05"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cmd_fish_03"
        app:layout_constraintTop_toBottomOf="@+id/cmd_dish_name_text"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/cmd_nuts_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/allergens_milk"
        android:maxWidth="32dp"
        android:src="@drawable/a05"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cmd_seafood_06"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cmd_milk_04"
        app:layout_constraintTop_toBottomOf="@+id/cmd_dish_name_text"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/cmd_seafood_06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/allergens_seafood"
        android:maxWidth="32dp"
        android:src="@drawable/a05"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cmd_dish_price_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cmd_nuts_05"
        app:layout_constraintTop_toBottomOf="@+id/cmd_dish_name_text"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/cmd_dish_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inner_margin"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cmd_dish_name_text"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="35 €" />

</android.support.constraint.ConstraintLayout>